Add to personal info

--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
           <hr />
           <p class="text-muted">
             I enjoy spending my time reading about new technologies, computer security, and web development. I also like to discuss new app ideas with friends and organize a team to develop them.
+            But what I like the most is creating intuitive, clean, and aesthetically pleasing user experiences - hopefully you find my site as a good example of that :)
           </p>
         </div>
         <div class="col-md-4 text-center">
