--- a/index.html
+++ b/index.html
@@ -282,7 +282,8 @@
   <!-- Bootstrap core js -->
   <script src="static/js/bootstrap.min.js"></script>
   <script src="static/js/scrollreveal.min.js"></script>
-  <script src="static/js/scrolling.js"> </script>
+  <script src="static/js/scrolling.js">
+  </script>
 
 </body>
 
