Fix parallax for mobile devices

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <!-- /.container-fluid -->
   </nav>
 
-  <header id="page-top">
+  <header id="page-top" class="parallax">
     <div class="header-content">
       <div class="header-content-inner">
         <h1 id="homeHeading">Josue Montenegro</h1>
@@ -114,7 +114,7 @@
 
   <!-- <hr class="division" /> -->
 
-  <section id="skills">
+  <section id="skills" class="parallax">
     <div class="container text-center">
       <h1 class="section-heading">Skills</h1>
     </div>
@@ -245,15 +245,15 @@
     </div>
   </section>
 
-  <div class="text-center">
-    <div class="">
+  <!-- <div class="text-center">
+    <div class="resume-strip">
 
     </div>
-  </div>
+  </div> -->
 
   <!-- <hr class="division" /> -->
 
-  <section id="contact">
+  <section id="contact" class="parallax">
     <div class="container text-center contact-heading">
       <h1 class="section-heading">Get In Touch</h1>
       <p>Do you want to work together or talk about an interesting project? <br> Don't be shy and say hi!
