Links open in another page

--- a/index.html
+++ b/index.html
@@ -176,14 +176,14 @@
       <div class="container project-item">
         <div class="row">
           <div class="col-md-6 proj-description">
-            <h2> <a href="https://github.com/josuemy/Corepool">Corepool</a></h2>
+            <h2> <a target="_blank" href="https://github.com/josuemy/Corepool">Corepool</a></h2>
             <p class="text-muted">
               During my internship at Procore, I had the opportunity to develop a mobile app that improved the parking and commuting logistics for the company's employees. I worked along with other 3 interns who shared my passion to learn new technologies and develop
               a good quality product. By the end of a week and a half, our product was completely functional and ready to be used.
             </p>
           </div>
           <div class="col-md-6 proj-img">
-            <a href="https://github.com/josuemy/Corepool" class="portfolio-box">
+            <a target="_blank" href="https://github.com/josuemy/Corepool" class="portfolio-box">
               <img src="static/images/corepool_mockup.png" class="img-responsive phone-mockup" alt="Corepool">
             </a>
           </div>
@@ -193,14 +193,14 @@
       <div class="container project-item">
         <div class="row">
           <div class="col-md-6 proj-description">
-            <h2><a href="https://play.google.com/store/apps/details?id=com.ucsb.cowbell&hl=en">Cowbell</a></h2>
+            <h2><a target="_blank" href="https://play.google.com/store/apps/details?id=com.ucsb.cowbell&hl=en">Cowbell</a></h2>
             <p class="text-muted">
               Cowbell is an alarm clock app for Android. Cowbell helps you wake up while it helps you learn with its three different wake up options. The user can create and customize a set of fill-in the blank or multiple choice cards that will pop up at the time
               the alarm goes off. The user will have to answer correctly in order to shut down the alarm!
             </p>
           </div>
           <div class="col-md-6 proj-img">
-            <a href="https://play.google.com/store/apps/details?id=com.ucsb.cowbell&hl=en" class="portfolio-box">
+            <a target="_blank"href="https://play.google.com/store/apps/details?id=com.ucsb.cowbell&hl=en" class="portfolio-box">
               <img src="static/images/cowbell_mockup.png" class="img-responsive phone-mockup" alt="Cowbell">
             </a>
           </div>
@@ -210,7 +210,7 @@
       <div class="container project-item">
         <div class="row">
           <div class="col-md-6 proj-description">
-            <h2><a href="https://github.com/josuemy/Lobster">Lobster</a></h2>
+            <h2><a target="_blank" href="https://github.com/josuemy/Lobster">Lobster</a></h2>
             <p class="text-muted">
               Lobster is a chat app designed for you and your significant other. With Lobster, you can create a virtual
               room exclusively for you two where you'll be able to share daily thoughts, pictures, and anything you want
@@ -219,7 +219,7 @@
             </p>
           </div>
           <div class="col-md-6 proj-img">
-            <a href="https://play.google.com/store/apps/details?id=com.ucsb.cowbell&hl=en" class="portfolio-box">
+            <a target="_blank" href="https://play.google.com/store/apps/details?id=com.ucsb.cowbell&hl=en" class="portfolio-box">
               <img src="static/images/lobster_mockup.png" class="img-responsive phone-mockup" alt="Cowbell">
             </a>
           </div>
@@ -229,14 +229,14 @@
       <div class="container project-item">
         <div class="row">
           <div class="col-md-6 proj-description">
-            <h2> <a href="https://chronooz.herokuapp.com/">Chronooz</a></h2>
+            <h2> <a target="_blank" href="https://chronooz.herokuapp.com/">Chronooz</a></h2>
             <p class="text-muted">
               Don't know what the latest news are talking about? Are you missing context to understand them? Chronooz gathers popular news from more than 58 sources and gives you a timeline of related events. Everything to catch up with current events is now in one
               place! I learned Ruby on Rails from scratch over the course of 24 hours and build this simple webapp with a friend of mine.
             </p>
           </div>
           <div class="col-md-6 proj-img">
-            <a href="https://chronooz.herokuapp.com/" class="portfolio-box">
+            <a target="_blank" href="https://chronooz.herokuapp.com/" class="portfolio-box">
               <img src="static/images/chronooz_mockup.png" class="img-responsive" alt="Chronooz">
             </a>
           </div>
@@ -253,7 +253,7 @@
 
   <!-- <hr class="division" /> -->
 
-  <section id="contact" class="parallax">
+  <section id="contact">
     <div class="container text-center contact-heading">
       <h1 class="section-heading">Get In Touch</h1>
       <p>Do you want to work together or talk about an interesting project? <br> Don't be shy and say hi!
@@ -289,9 +289,9 @@
     <div class="text-center">
       <div class="social-strip">
         <ul>
-          <li class="social-item linkedin"><a href="https://www.linkedin.com/in/josuemi/"><i class="fa fa-linkedin"> </i></a></li>
-          <li class="social-item github"><a href="https://github.com/josuemy"><i class="fa fa-github"> </i></a></li>
-          <li class="social-item instagram"><a href="https://www.instagram.com/joskacho/"><i class="fa fa-instagram"> </i></a></li>
+          <li class="social-item linkedin"><a target="_blank" href="https://www.linkedin.com/in/josuemi/"><i class="fa fa-linkedin"> </i></a></li>
+          <li class="social-item github"><a target="_blank" href="https://github.com/josuemy"><i class="fa fa-github"> </i></a></li>
+          <li class="social-item instagram"><a target="_blank" href="https://www.instagram.com/joskacho/"><i class="fa fa-instagram"> </i></a></li>
         </ul>
         <div class="copyright">
           © 2018 Copyright: Josue Montenegro
