--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <meta name="author" content="">
 
   <title>Josue Montenegro</title>
+  <link rel="shortcut icon" href="favicon.ico" />
 
   <!-- Bootstrap core CSS -->
   <link href="static/css/bootstrap.min.css" rel="stylesheet">
