--- a/index.html
+++ b/index.html
@@ -246,11 +246,12 @@
     </div>
   </section>
 
-  <!-- <div class="text-center">
-    <div class="resume-strip">
-
+  <div class="text-center">
+    <div href="resume.pdf" class="resume-strip">
+        <a class="resume-link" target="_blank" href="resume.pdf">Check out my full resume!</a> <br />
+        <a target="_blank" href="resume.pdf"><i class="fa fa-file-text"> </i></a>
     </div>
-  </div> -->
+  </div>
 
   <!-- <hr class="division" /> -->
 
