Fix grammar mistake

--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
         <div class="col-md-4 text-center">
           <i class="fa fa-4x fa-university sr-icons"></i>
           <hr />
-          <p class="text-faded">
-            Hello! My name is Josue Montenegro and I'm an international CS student at UCSB -- I'm graduating on June 2018! I'm a person who is constantly looking for things to learn and is passionate about helping others do the same.
+          <p class="text-muted">
+            Hello! My name is Josue Montenegro and I'm an international CS student at UCSB -- I'm graduating in June of 2018! I'm a person who is constantly looking for things to learn and is passionate about helping others do the same.
           </p>
         </div>
         <div class="col-md-4 text-center">
