fix link for lobster img

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
             </p>
           </div>
           <div class="col-md-6 proj-img">
-            <a target="_blank" href="https://play.google.com/store/apps/details?id=com.ucsb.cowbell&hl=en" class="portfolio-box">
+            <a target="_blank" href="https://github.com/josuemy/Lobster" class="portfolio-box">
               <img src="static/images/lobster_mockup.png" class="img-responsive phone-mockup" alt="Cowbell">
             </a>
           </div>
