--- a/index.html
+++ b/index.html
@@ -92,14 +92,14 @@
           <i class="fa fa-4x fa-university sr-icons"></i>
           <hr />
           <p class="text-muted">
-            Hello! My name is Josue Montenegro and I'm an international CS student at UCSB -- I'm graduating in June of 2018! I'm a person who is constantly looking for things to learn and is passionate about helping others do the same.
+            Hello! My name is Josue Montenegro and I'm an international CS student at UCSB graduating in June of 2018. I'm constantly looking for things to learn and passionate about helping others do the same.
           </p>
         </div>
         <div class="col-md-4 text-center">
           <i class="fa fa-4x fa-code sr-icons"></i>
           <hr />
           <p class="text-muted">
-            I enjoy spending my time reading about new technologies, computer security, and web development. I also like to discuss new app ideas with friends and organize a team to develop them.
+            I enjoy spending my time reading about new technologies, computer security, and web development. I also like to discuss new app ideas with friends and organize teams to develop them.
           </p>
         </div>
         <div class="col-md-4 text-center">
