Fix width of contact form and extra space on mobile devices

--- a/index.html
+++ b/index.html
@@ -196,8 +196,8 @@
           <div class="col-md-6 proj-description">
             <h2><a target="_blank" href="https://play.google.com/store/apps/details?id=com.ucsb.cowbell&hl=en">Cowbell</a></h2>
             <p class="text-muted">
-              Cowbell is an alarm clock app for Android. Cowbell helps you wake up while it helps you learn with its three different wake up options. The user can create and customize a set of fill-in the blank or multiple choice cards that will pop up at the time
-              the alarm goes off. The user will have to answer correctly in order to shut down the alarm!
+              Cowbell is an alarm clock app for Android. Cowbell helps you wake up while it helps you learn with its three different wake up options. You'll be able to create and customize a set of fill-in the blank, or multiple choice cards that will pop up at the time
+              the alarm goes off. Answer correctly in order to shut down the alarm!
             </p>
           </div>
           <div class="col-md-6 proj-img">
@@ -233,7 +233,7 @@
             <h2> <a target="_blank" href="https://chronooz.herokuapp.com/">Chronooz</a></h2>
             <p class="text-muted">
               Don't know what the latest news are talking about? Are you missing context to understand them? Chronooz gathers popular news from more than 58 sources and gives you a timeline of related events. Everything to catch up with current events is now in one
-              place! I learned Ruby on Rails from scratch over the course of 24 hours and build this simple webapp with a friend of mine.
+              place! I learned Ruby on Rails from scratch over the course of 24 hours and built this simple webapp with a friend of mine.
             </p>
           </div>
           <div class="col-md-6 proj-img">
@@ -269,7 +269,7 @@
           <input type="text" class="form-control form-input" name="name" required>
         </div>
         <div class="form-group">
-          <label for="email">Email address:</label>
+          <label for="email">Email</label>
           <input type="email" class="form-control form-input" name="email" required>
         </div>
         <div class="form-group">
