Fix lag and changed navbar

--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
   <footer>
     <div class="text-center">
       <div class="social-strip">
-        <ul>
+        <ul class="social-list">
           <li class="social-item linkedin"><a target="_blank" href="https://www.linkedin.com/in/josuemi/"><i class="fa fa-linkedin"> </i></a></li>
           <li class="social-item github"><a target="_blank" href="https://github.com/josuemy"><i class="fa fa-github"> </i></a></li>
           <li class="social-item instagram"><a target="_blank" href="https://www.instagram.com/joskacho/"><i class="fa fa-instagram"> </i></a></li>
