fix message form

--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
     <div class="contact-wrapper text-left">
       <form action="https://formspree.io/josuemy@gmail.com" method="POST">
         <div class="form-group">
-          <label for="email">Name</label>
+          <label for="name">Name</label>
           <input type="text" class="form-control form-input" name="name" required>
         </div>
         <div class="form-group">
@@ -273,12 +273,12 @@
           <input type="email" class="form-control form-input" name="email" required>
         </div>
         <div class="form-group">
-          <label for="email">Subject</label>
+          <label for="subject">Subject</label>
           <input type="text" class="form-control form-input" name="_subject" required>
         </div>
         <div class="form-group">
-          <label for="email">Message</label>
-          <textarea class="form-control form-input" name="message" row="6" required></textarea>
+          <label for="message">Message</label>
+          <textarea class="form-control form-input form-message" name="message" required></textarea>
         </div>
         <div class="text-center form-button">
           <button type="submit" class="btn btn-primary">Send</button>
