--- a/index.html
+++ b/index.html
@@ -15,9 +15,6 @@
   <!-- Bootstrap core CSS -->
   <link href="static/css/bootstrap.min.css" rel="stylesheet">
 
-  <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-  <!-- <link href="../../assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet"> -->
-
   <!-- Custom Fonts -->
   <link href="static/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
@@ -27,15 +24,6 @@
   <!-- Custom styles for this template -->
   <link href="static/css/mypage.css" rel="stylesheet">
 
-  <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-  <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-  <!-- <script src="../../assets/js/ie-emulation-modes-warning.js"></script> -->
-
-  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-  <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
 </head>
 
 <body>
@@ -88,21 +76,21 @@
     </div>
     <div class="container about-section">
       <div class="row">
-        <div class="col-md-4 text-center">
+        <div class="col-md-4 text-center intro">
           <i class="fa fa-4x fa-university sr-icons"></i>
           <hr />
           <p class="text-muted">
             Hello! My name is Josue Montenegro and I'm an international CS student at UCSB graduating in June of 2018. I'm constantly looking for things to learn and passionate about helping others do the same.
           </p>
         </div>
-        <div class="col-md-4 text-center">
+        <div class="col-md-4 text-center intro">
           <i class="fa fa-4x fa-code sr-icons"></i>
           <hr />
           <p class="text-muted">
             I enjoy spending my time reading about new technologies, computer security, and web development. I also like to discuss new app ideas with friends and organize teams to develop them.
           </p>
         </div>
-        <div class="col-md-4 text-center">
+        <div class="col-md-4 text-center intro">
           <i class="fa fa-4x fa-camera-retro sr-icons"></i>
           <hr />
           <p class="text-muted">
@@ -146,10 +134,10 @@
             <span>Tools </span>
           </h2>
             <ul>
+              <li class="tool-item"> Atom</li>
               <li class="tool-item"> Git / GitHub</li>
               <li class="tool-item"> Command Line</li>
               <li class="tool-item"> Chrome DevTools</li>
-              <li class="tool-item"> Atom</li>
             </ul>
             <h2 class="skill-title">
             <span class="title-icon"> <i class="fa fa-1x fa-book"></i></span>
@@ -302,13 +290,10 @@
     </div>
   </footer>
 
-  <!-- Bootstrap core JavaScript
-    ================================================== -->
-  <!-- Placed at the end of the document so the pages load faster -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <!-- Bootstrap core js -->
   <script src="static/js/bootstrap.min.js"></script>
-  <script src="static/js/scrollreveal.min.js"></script>
+  <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
   <script src="static/js/scrolling.js">
   </script>
 
