--- a/index.html
+++ b/index.html
@@ -293,6 +293,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
   <!-- Bootstrap core js -->
   <script src="static/js/bootstrap.min.js"></script>
+  <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
   <script src="static/js/scrolling.js">
   </script>
 
