--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
 
   <!-- Custom Fonts -->
   <link href="static/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-  <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
-  <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800'
+    rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic'
+    rel='stylesheet' type='text/css'>
 
 
   <!-- Custom styles for this template -->
@@ -32,8 +34,9 @@
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-navbar">
-                    <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
-                </button>
+          <span class="sr-only">Toggle navigation</span> Menu
+          <i class="fa fa-bars"></i>
+        </button>
         <a class="navbar-brand page-scroll" href="#page-top">Josue Montenegro</a>
       </div>
 
@@ -54,9 +57,7 @@
           </li>
         </ul>
       </div>
-      <!-- /.navbar-collapse -->
     </div>
-    <!-- /.container-fluid -->
   </nav>
 
   <header id="page-top" class="parallax">
@@ -80,28 +81,30 @@
           <i class="fa fa-4x fa-university sr-icons"></i>
           <hr />
           <p class="text-muted">
-            Hello! My name is Josue Montenegro and I'm an international CS student at UCSB graduating in June of 2018. I'm constantly looking for things to learn and passionate about helping others do the same.
+            Hello! My name is Josue Montenegro and I'm an international CS student at UCSB graduating in June of 2018. I'm constantly
+            looking for things to learn and passionate about helping others do the same.
           </p>
         </div>
         <div class="col-md-4 text-center intro">
           <i class="fa fa-4x fa-code sr-icons"></i>
           <hr />
           <p class="text-muted">
-            I enjoy spending my time reading about new technologies, computer security, and web development. I also like to discuss new app ideas with friends and organize teams to develop them.
+            I enjoy spending my time reading about new technologies, computer security, and web development. I also like to discuss new
+            app ideas with friends and organize teams to develop them.
           </p>
         </div>
         <div class="col-md-4 text-center intro">
           <i class="fa fa-4x fa-camera-retro sr-icons"></i>
           <hr />
           <p class="text-muted">
-            When I'm not working on CS stuff I like to read novels, draw quick sketches, compose songs, take pictures, or go on an adventure with the Excursion Club at UCSB.
+            When I'm not working on CS stuff I like to read novels, draw quick sketches, compose songs, take pictures, or go on an adventure
+            with the Excursion Club at UCSB.
           </p>
         </div>
       </div>
     </div>
   </section>
 
-  <!-- <hr class="division" /> -->
 
   <section id="skills" class="parallax">
     <div class="container text-center">
@@ -111,11 +114,13 @@
       <div class="row">
         <div class="col-md-6 text-center">
           <h2 class="skill-title">
-            <span class="title-icon"> <i class="fa fa-1x fa-cogs"></i></span>
+            <span class="title-icon">
+              <i class="fa fa-1x fa-cogs"></i>
+            </span>
             <span>Development</span>
           </h2>
           <ul>
-            <li class="skill-item"> C++</li>
+            <li class="skill-item"> C/C++</li>
             <li class="skill-item"> Java</li>
             <li class="skill-item"> Python</li>
             <li class="skill-item"> Ruby</li>
@@ -130,9 +135,11 @@
         <div class="col-md-6">
           <div class="container tool-container">
             <h2 class="skill-title">
-            <span class="title-icon"> <i class="fa fa-1x fa-wrench"></i></span>
-            <span>Tools </span>
-          </h2>
+              <span class="title-icon">
+                <i class="fa fa-1x fa-wrench"></i>
+              </span>
+              <span>Tools </span>
+            </h2>
             <ul>
               <li class="tool-item"> Atom</li>
               <li class="tool-item"> Git / GitHub</li>
@@ -140,9 +147,11 @@
               <li class="tool-item"> Chrome DevTools</li>
             </ul>
             <h2 class="skill-title">
-            <span class="title-icon"> <i class="fa fa-1x fa-book"></i></span>
-            <span> Knowledge </span>
-          </h2>
+              <span class="title-icon">
+                <i class="fa fa-1x fa-book"></i>
+              </span>
+              <span> Knowledge </span>
+            </h2>
             <ul>
               <li class="tool-item"> OOP </li>
               <li class="tool-item"> Mobile Dev</li>
@@ -155,20 +164,56 @@
     </div>
   </section>
 
-  <!-- <hr class="division" /> -->
+  <!-- Portfolio -->
 
   <section id="portfolio">
     <div class="container text-center">
       <h1 class="section-heading">Some of my projects</h1>
     </div>
     <div class="container project-list">
+
+      <!-- Corepool -->
       <div class="container project-item">
         <div class="row">
           <div class="col-md-6 proj-description">
-            <h2> <a target="_blank" href="https://github.com/josuemy/Corepool">Corepool</a></h2>
+            <h2>
+              <a target="_blank" href="https://youtu.be/VybGMZtXDdM?t=3947">Stage Presence</a>
+            </h2>
             <p class="text-muted">
-              During my internship at Procore, I had the opportunity to develop a mobile app that improved the parking and commuting logistics for the company's employees. I worked along with other 3 interns who shared my passion to learn new technologies and develop
-              a good quality product. By the end of a week and a half, our product was completely functional and ready to be used.
+              How many times have you needed to give an important presentation? Now, how many courses have you taken on the art of giving presentations?
+              If the answer is "none", or "not many", there's nothing to worry about. We've developed Stage Presence - a web platform that helps you practice
+              a presentation of your choosing until it's perfect. </p>
+              <p class="text-muted">
+                Stage Presence was this year's <a target="_blank" href="https://youtu.be/6AsQZEqmdi0?t=315">UCSB Capstone winner!</a> I was in charge of
+                the app's Video module which tracked the user's movements and facial sentiment. I was also responsible for the front-end design and overall look of the app. If you are interested
+                in knowing more about this or any other project, make sure to click on the project's title :)
+              </p>
+          </div>
+          <div class="col-md-6 proj-img">
+            <a target="_blank" href="https://youtu.be/VybGMZtXDdM?t=3947" class="portfolio-box">
+              <img src="static/images/stage-presence.png" class="img-responsive phone-mockup" alt="Corepool">
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <!-- Corepool -->
+      <div class="container project-item">
+        <div class="row">
+          <div class="col-md-6 proj-description">
+            <h2>
+              <a target="_blank" href="https://github.com/josuemy/Corepool">Corepool</a>
+            </h2>
+            <p class="text-muted">
+              During my internship at Procore, I had the opportunity to develop a mobile app that improved the parking and commuting logistics
+              for the company's employees. I worked along with other 3 interns who shared my passion to learn new technologies
+              and develop a good quality product. By the end of a week and a half, our product was completely functional
+              and ready to be used.
+            </p>
+            <p class="text-muted">
+              I designed and implemented an intuitive UI based on user experience research.
+              Additionally, I also implemented JavaScript promises to avoid wrong data delivery caused by
+              asynchronous calls to the database.
             </p>
           </div>
           <div class="col-md-6 proj-img">
@@ -178,33 +223,23 @@
           </div>
         </div>
       </div>
-
+      
+      <!-- Lobster -->
       <div class="container project-item">
         <div class="row">
           <div class="col-md-6 proj-description">
-            <h2><a target="_blank" href="https://play.google.com/store/apps/details?id=com.ucsb.cowbell&hl=en">Cowbell</a></h2>
+            <h2>
+              <a target="_blank" href="https://github.com/josuemy/Lobster">Lobster</a>
+            </h2>
             <p class="text-muted">
-              Cowbell is an alarm clock app for Android. Cowbell helps you wake up while it helps you learn with its three different wake up options. You'll be able to create and customize a set of fill-in the blank, or multiple choice cards that will pop up at the time
-              the alarm goes off. Answer correctly in order to shut down the alarm!
+              Lobster is a chat app designed for you and your significant other. With Lobster, you can create a virtual room exclusively
+              for you two where you'll be able to share daily thoughts, pictures, and anything you want without the distraction
+              of other people.
             </p>
-          </div>
-          <div class="col-md-6 proj-img">
-            <a target="_blank"href="https://play.google.com/store/apps/details?id=com.ucsb.cowbell&hl=en" class="portfolio-box">
-              <img src="static/images/cowbell_mockup.png" class="img-responsive phone-mockup" alt="Cowbell">
-            </a>
-          </div>
-        </div>
-      </div>
-
-      <div class="container project-item">
-        <div class="row">
-          <div class="col-md-6 proj-description">
-            <h2><a target="_blank" href="https://github.com/josuemy/Lobster">Lobster</a></h2>
             <p class="text-muted">
-              Lobster is a chat app designed for you and your significant other. With Lobster, you can create a virtual
-              room exclusively for you two where you'll be able to share daily thoughts, pictures, and anything you want
-              without the distraction of other people.
-
+              I designed the firebase database schema for users and chat rooms. 
+              I like apps where you can have a user's profile so I used Glide and Firebase's Cloud Storage 
+              to let users have an avatar and share images.
             </p>
           </div>
           <div class="col-md-6 proj-img">
@@ -215,13 +250,40 @@
         </div>
       </div>
 
+      <!-- Cowbell -->
       <div class="container project-item">
         <div class="row">
           <div class="col-md-6 proj-description">
-            <h2> <a target="_blank" href="https://chronooz.herokuapp.com/">Chronooz</a></h2>
+            <h2>
+              <a target="_blank" href="https://play.google.com/store/apps/details?id=com.ucsb.cowbell&hl=en">Cowbell</a>
+            </h2>
             <p class="text-muted">
-              Don't know what the latest news are talking about? Are you missing context to understand them? Chronooz gathers popular news from more than 58 sources and gives you a timeline of related events. Everything to catch up with current events is now in one
-              place! I learned Ruby on Rails from scratch over the course of 24 hours and built this simple webapp with a friend of mine.
+              Cowbell is an alarm clock app for Android. Cowbell helps you wake up while it helps you learn with its three different wake
+              up options. You'll be able to create and customize a set of fill-in the blank, or multiple choice cards that
+              will pop up at the time the alarm goes off. Answer correctly in order to shut down the alarm!
+            </p>
+          </div>
+          <div class="col-md-6 proj-img">
+            <a target="_blank" href="https://play.google.com/store/apps/details?id=com.ucsb.cowbell&hl=en" class="portfolio-box">
+              <img src="static/images/cowbell_mockup.png" class="img-responsive phone-mockup" alt="Cowbell">
+            </a>
+          </div>
+        </div>
+      </div>
+
+
+      <!-- Chronooz -->
+      <div class="container project-item">
+        <div class="row">
+          <div class="col-md-6 proj-description">
+            <h2>
+              <a target="_blank" href="https://chronooz.herokuapp.com/">Chronooz</a>
+            </h2>
+            <p class="text-muted">
+              Don't know what the latest news are talking about? Are you missing context to understand them? Chronooz gathers popular news
+              from more than 58 sources and gives you a timeline of related events. Everything to catch up with current events
+              is now in one place! I learned Ruby on Rails from scratch over the course of 24 hours and built this simple
+              webapp with a friend of mine.
             </p>
           </div>
           <div class="col-md-6 proj-img">
@@ -236,17 +298,20 @@
 
   <div class="text-center">
     <div href="resume.pdf" class="resume-strip">
-        <a class="resume-link" target="_blank" href="resume.pdf">Check out my full resume!</a> <br />
-        <a target="_blank" href="resume.pdf"><i class="fa fa-file-text"> </i></a>
+      <a class="resume-link" target="_blank" href="resume.pdf">Check out my full resume!</a>
+      <br />
+      <a target="_blank" href="resume.pdf">
+        <i class="fa fa-file-text"> </i>
+      </a>
     </div>
   </div>
 
-  <!-- <hr class="division" /> -->
 
   <section id="contact">
     <div class="container text-center contact-heading">
       <h1 class="section-heading">Get In Touch</h1>
-      <p>Do you want to work together or talk about an interesting project? <br> Don't be shy and say hi!
+      <p>Do you want to work together or talk about an interesting project?
+        <br> Don't be shy and say hi!
       </p>
     </div>
 
@@ -279,9 +344,21 @@
     <div class="text-center">
       <div class="social-strip">
         <ul class="social-list">
-          <li class="social-item linkedin"><a target="_blank" href="https://www.linkedin.com/in/josuemi/"><i class="fa fa-linkedin"> </i></a></li>
-          <li class="social-item github"><a target="_blank" href="https://github.com/josuemy"><i class="fa fa-github"> </i></a></li>
-          <li class="social-item instagram"><a target="_blank" href="https://www.instagram.com/joskacho/"><i class="fa fa-instagram"> </i></a></li>
+          <li class="social-item linkedin">
+            <a target="_blank" href="https://www.linkedin.com/in/josuemi/">
+              <i class="fa fa-linkedin"> </i>
+            </a>
+          </li>
+          <li class="social-item github">
+            <a target="_blank" href="https://github.com/josuemy">
+              <i class="fa fa-github"> </i>
+            </a>
+          </li>
+          <li class="social-item instagram">
+            <a target="_blank" href="https://www.instagram.com/joskacho/">
+              <i class="fa fa-instagram"> </i>
+            </a>
+          </li>
         </ul>
         <div class="copyright">
           © 2018 Copyright: Josue Montenegro
