--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-  <meta name="description" content="Hi there! This is the portfolio website for Josue Montenegro. Here you'll find his most recent resume, projects, and social media links. Enjoy!">
+  <meta name="description" content="Hi there! This is the portfolio website for Josue Montenegro. Here you'll find his most recent resume, projects, and social media links.">
   <meta name="author" content="">
 
   <title>Josue Montenegro</title>
