update resume and knowledge

--- a/index.html
+++ b/index.html
@@ -138,10 +138,10 @@
               <span class="title-icon">
                 <i class="fa fa-1x fa-wrench"></i>
               </span>
-              <span>Tools </span>
+              <span>Tools</span>
             </h2>
             <ul>
-              <li class="tool-item"> Atom</li>
+              <li class="tool-item"> IDEs</li>
               <li class="tool-item"> Git / GitHub</li>
               <li class="tool-item"> Command Line</li>
               <li class="tool-item"> Chrome DevTools</li>
@@ -150,13 +150,13 @@
               <span class="title-icon">
                 <i class="fa fa-1x fa-book"></i>
               </span>
-              <span> Knowledge </span>
+              <span> Relevant Coursework </span>
             </h2>
             <ul>
-              <li class="tool-item"> OOP </li>
+              <li class="tool-item"> Security </li>
               <li class="tool-item"> Mobile Dev</li>
-              <li class="tool-item"> Web Design</li>
-              <li class="tool-item"> Computer Security</li>
+              <li class="tool-item"> Operative Systems</li>
+              <li class="tool-item"> Data Structs. & Algorithms</li>
             </ul>
           </div>
         </div>
