--- a/index.html
+++ b/index.html
@@ -181,10 +181,10 @@
             </h2>
             <p class="text-muted">
               How many times have you needed to give an important speech? Now, how many courses have you taken on the art of giving presentations?
-              If the answer is "none", or "not many", there's nothing to worry about. We've developed Stage Presence - a web platform that helps you practice
-              a presentation of your choosing until it's perfect. </p>
+              If the answer is "none", or "not many", Stage Presence has your back. Stage Presence is a web platform that helps you practice
+              a presentation of your choosing until it's perfect through challenges and personalized training. </p>
               <p class="text-muted">
-                Stage Presence was this year's <a target="_blank" href="https://youtu.be/6AsQZEqmdi0?t=315">UCSB Capstone winner!</a> I was in charge of
+                This project was this year's <a target="_blank" href="https://youtu.be/6AsQZEqmdi0?t=315">UCSB Capstone winner!</a> I was in charge of
                 the app's Video module which tracked the user's movements and facial sentiment. I was also responsible for the frontend design and overall look of the app. If you are interested
                 in knowing more about this or any other project, make sure to click on the project's title :)
               </p>
