--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           <i class="fa fa-4x fa-university sr-icons"></i>
           <hr />
           <p class="text-muted">
-            Hello! My name is Josue Montenegro and I'm an international CS student at UCSB graduating in June of 2018. I'm constantly
+            Hello! My name is Josue Montenegro and I'm a software developer with a B.S. in Computer Science from the University of California Santa Barbara. I'm constantly
             looking for things to learn and passionate about helping others do the same.
           </p>
         </div>
@@ -124,11 +124,11 @@
             <li class="skill-item"> Java</li>
             <li class="skill-item"> Python</li>
             <li class="skill-item"> Ruby</li>
-            <li class="skill-item"> React</li>
+
+            <li class="skill-item"> JavaScript</li>
+
             <li class="skill-item"> HTML</li>
             <li class="skill-item"> CSS3</li>
-            <li class="skill-item"> JavaScript</li>
-            <li class="skill-item"> Android</li>
           </ul>
         </div>
 
@@ -141,10 +141,10 @@
               <span>Tools</span>
             </h2>
             <ul>
-              <li class="tool-item"> IDEs</li>
               <li class="tool-item"> Git / GitHub</li>
               <li class="tool-item"> Command Line</li>
               <li class="tool-item"> Chrome DevTools</li>
+              <li class="tool-item"> Firebase</li>
             </ul>
             <h2 class="skill-title">
               <span class="title-icon">
@@ -154,9 +154,9 @@
             </h2>
             <ul>
               <li class="tool-item"> Security </li>
-              <li class="tool-item"> Mobile Dev</li>
+              <li class="tool-item"> Machine Learning</li>
               <li class="tool-item"> Operative Systems</li>
-              <li class="tool-item"> Data Structs. & Algorithms</li>
+              <li class="tool-item"> Distributed Systems</li>
             </ul>
           </div>
         </div>
