--- a/index.html
+++ b/index.html
@@ -180,13 +180,11 @@
               <a target="_blank" href="https://youtu.be/VybGMZtXDdM?t=3947">Stage Presence</a>
             </h2>
             <p class="text-muted">
-              How many times have you needed to give an important speech? Now, how many courses have you taken on the art of giving presentations?
-              If the answer is "none", or "not many", Stage Presence has your back. Stage Presence is a web platform that helps you practice
-              a presentation of your choosing until it's perfect through challenges and personalized training. </p>
+              Stage Presence is a web platform that helps you practice a presentation of your choosing until it's perfect through challenges and personalized training. </p>
               <p class="text-muted">
                 This project was this year's <a target="_blank" href="https://youtu.be/6AsQZEqmdi0?t=315">UCSB Capstone winner!</a> I was in charge of
-                the app's Video module which tracked the user's movements and facial sentiment. I was also responsible for the frontend design and overall look of the app. If you are interested
-                in knowing more about this or any other project, make sure to click on the project's title :)
+                the app's Video module which tracked the user's movements and facial sentiment. I was also responsible for the frontend design and overall look of the app. Make sure to check out 
+                the recording of our demo by clicking on the title or image on the left!
               </p>
           </div>
           <div class="col-md-6 proj-img">
